// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api should allow to enable validation using "process.env.SKIP_VALIDATION" #2 1`] = `
"Invalid options object. NAME has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'foo'. These properties are valid:
   object { name? }"
`;

exports[`api should allow to enable validation using "process.env.SKIP_VALIDATION" 1`] = `
"Invalid options object. NAME has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'foo'. These properties are valid:
   object { name? }"
`;

exports[`api should allow to enable validation using API 1`] = `
"Invalid options object. NAME has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'foo'. These properties are valid:
   object { name? }"
`;

exports[`api should get configuration from schema 1`] = `
"Invalid options object. CSS Loader has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'foo'. These properties are valid:
   object { name? }"
`;

exports[`api should prefer configuration over "title" #1 1`] = `
"Invalid options object. NAME has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'foo'. These properties are valid:
   object { name? }"
`;

exports[`api should prefer configuration over "title" #2 1`] = `
"Invalid BaseDataPath object. CSS Loader has been initialized using a BaseDataPath object that does not match the API schema.
 - BaseDataPath has an unknown property 'foo'. These properties are valid:
   object { name? }"
`;

exports[`api should prefer configuration over "title" 1`] = `
"Invalid BaseDataPath object. NAME has been initialized using a BaseDataPath object that does not match the API schema.
 - BaseDataPath has an unknown property 'foo'. These properties are valid:
   object { name? }"
`;

exports[`api should use default values when "title" is broken 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration has an unknown property 'foo'. These properties are valid:
   object { name? }"
`;

exports[`api should work with anyOf 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration should be one of these:
   object { bar, … } | object { baz, … }
   Details:
    * configuration misses the property 'bar' | should be any non-object. Should be:
      number
    * configuration misses the property 'baz' | should be any non-object. Should be:
      number"
`;

exports[`api should work with minProperties properties 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration should be a non-empty object."
`;

exports[`api should work with required properties #2 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration misses the property 'e'."
`;

exports[`api should work with required properties 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.c misses the property 'e'. Should be:
   string"
`;
